# task-5

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.c
lib/: CMakeLists.txt  lib.def
lib/include/: replace.h
lib/src/: replace.c
tests/: CMakeLists.txt
tests/src/: test_main.c  test_replace.c
